[package]
name = "example-internal"
version = "0.1.0"
authors = ["Jingjie Zhuang <jingjie.zhuang@igg.com>"]
edition = "2018"

[lib]
name = "nss_internal"
crate-type = [ "cdylib" ]

[dependencies]
libc = "0.2.0"
lazy_static = "1.3.0"
paste = "0.1"
libnss = { path = "../libnss" }
trust-dns-resolver = "0.12.0"
